--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "C:/Go/kenshu/Excercise",
+            "program": "C:/Go/kenshu/a tour of go",
             "env": {},
             "args": []
         }
